--- a/rawgit.html
+++ b/rawgit.html
@@ -42,6 +42,11 @@
                         main: debug ? 'ol-debug' : 'ol'
                     },
                     {
+                        name: 'proj4',
+                        location: 'https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.3',
+                        main: debug ? 'proj4-src' : 'proj4'
+                    },
+                    {
                         name: 'jquery',
                         location: 'https://code.jquery.com',
                         main: debug ? 'jquery-3.1.0' : 'jquery-3.1.0.min'
