--- a/rawgit.html
+++ b/rawgit.html
@@ -6,7 +6,7 @@
     <title>OpenLayers 3 - Popup</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <style>
-        @import url('https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1/ol.css');
+        @import url('https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.1.3/css/ol.css');
         .map {
             position: absolute;
             top: 0;
@@ -15,56 +15,11 @@
             right: 0;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
+    <script src="./static/require.js" data-main="./built/loaders/examples"></script>
 </head>
 
 <body>
     <div class="map"></div>
-    <script>
-        (() => {
-            function getParameterByName(name, url = window.location.href) {
-                name = name.replace(/[\[\]]/g, "\\$&");
-                var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-                    results = regex.exec(url);
-                if (!results) return null;
-                if (!results[2]) return '';
-                return decodeURIComponent(results[2].replace(/\+/g, " "));
-            }
-
-            let debug = getParameterByName("debug") === "1";
-            let localhost = window.location.hostname === "localhost";
-
-            require.config({
-
-                packages: [
-                    {
-                        name: 'openlayers',
-                        location: localhost ? "./bower_components/openlayers" : 'https://cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1',
-                        main: debug ? 'ol-debug' : 'ol'
-                    },
-                    {
-                        name: 'proj4',
-                        location: localhost ? "./bower_components/proj4/dist" :  'https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.3',
-                        main: debug ? 'proj4-src' : 'proj4'
-                    },
-                    {
-                        name: 'jquery',
-                        location: localhost ? "./bower_components/jquery/dist" : 'https://cdn.rawgit.com/jquery/jquery-dist/3.1.1/dist',
-                        main: debug ? 'jquery' : 'jquery.min'
-                    }
-                ],
-
-                deps: [
-                    "built/index"
-                ],
-
-                callback: () => {
-                    require([getParameterByName("run") || "ol3-draw/examples/index"], test => test.run());
-                }
-            });
-
-        })();
-    </script>
 </body>
 
 </html>
